Modificado error con carpetas

--- a/index.html
+++ b/index.html
@@ -9,86 +9,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Carousel extra styles -->
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
-
-  <style>
-
-    body{
-      background-color: #1444CC;
-      background-image: url("/home/diegojnb/pablo/CcxbSFPW0AAG2ZW.jpg:large.jpeg");
-    }
-    #core-nav{
-      visibility: hidden;
-    }
-
-    .btn,
-    .btn:hover,
-    .btn:focus {
-      border: 0px;
-      width: 5%;
-      height: 10%;
-      position: relative;
-    }
-
-    #core-button{
-      left:0%;
-    }
-    /*
-    #1444CC
-    #3D5599
-    #00C9FF
-    #FF5700
-    #000000
-    */
-    #exCollapsingNavbar{
-      width: 20%;
-      height: 100%;
-      float:left;
-      opacity: 1;
-      color: white;
-      background-color: #1444CC;
-      position: absolute;
-   }
-
-    h1 , h3{
-     font-family: moonbeam;
-     color: white;
-     opacity: 1;
-     /*text-decoration: underline;*/
-     font-weight: 800;
-     margin-bottom: 100px;
-    }
-
-    h4{
-      color: white;
-      top:86%;
-      font-weight: 800;
-      position: absolute;
-      font-family: segoe-script;
-    }
-
-    li {
-      margin-top:20px;
-      list-style-type: none;
-    }
-
-    @font-face {
-       font-family: 'moonbeam';
-       src: url('/home/diegojnb/pablo/MoonbeamRegular.ttf');
-     }
-
-     @font-face {
-        font-family: 'rowdyheavy';
-        src: url('/home/diegojnb/pablo/RowdyHeavyRegular.ttf');
-      }
-
-      @font-face {
-         font-family: 'segoe-script';
-         src: url('/home/diegojnb/pablo/ufonts.com_segoe-script.ttf');
-       }
-
-  </style>
 
   <body>
 
@@ -120,39 +42,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
-
-    <script>
-
-
-    jQuery(document).ready(function() {
-
-      $("#core-button").click(function(){
-          if ($(this).css('left') == "0px") {
-            $(this).animate({left: '20%'});
-            $(this).html('&#10005');
-          }else{
-            $(this).animate({left: '0%'});
-            $(this).html('&#9776');
-          }
-      });
-
-      $('#titulo').hover(function(){
-            $(this).css("font-family", "moonbeam");
-            setTimeout(function(){
-            }, 1000);
-            $(this).css('font-family','segoe-script');
-            setTimeout(function(){
-            }, 1000);
-            $(this).css('font-family','rowdyheavy');
-            setTimeout(function(){
-            }, 1000);
-      },function(){
-        $(this).css('font-family')='moonbeam';
-      });
-    });
-
-    </script>
+    <script src="jq/main.js"></script>
 
   </body>
 </html>
