Añadidas imagenes de fondo

--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
   <body>
     <div class="collapse" id="exCollapsingNavbar">
       <div class="bg-inverse p-a-1">
-        <h1 id='titulo'>Deporte y valores</h1>
+        <h1 id='titulo'><a href="#home">Deporte y valores</a></h1>
         <span>
           <h3>
             <ul>
-              <li><a href="/home/diegojnb/AT/index.html">¿Quiénes somos?</a></li>
-              <li><a href="https://www.youtube.com/channel/UCZ96h_qATIZr92Fz3n-ZnlA">Como trabajamos</a></li>
-              <li><a href="http://www.sport.es">Formación</a></li>
-              <li><a href="http://www.youtube.com">Prueba 4</a></li>
-              <li><a href="http://www.youtube.com">Actividades</a></li>
-              <li><a href="http://www.youtube.com">Contacto</a></li>
+              <li><a href="#school">Escuela</a></li>
+              <li><a href="https://www.youtube.com/channel/UCZ96h_qATIZr92Fz3n-ZnlA">Deporte y Valores</a></li>
+              <li><a href="http://www.sport.es">Nosotros</a></li>
             </ul>
           </h3>
           <h4>
@@ -38,9 +35,18 @@
     <button type="button" id="core-button" class="btn btn-default" data-toggle="collapse" data-target="#exCollapsingNavbar">
       &#9776;
     </button>
+    <div id="home">
+    </div>
+    <div id="school">
+    </div>
+    <div id="depyval">
+    </div>
+    <div id="nosotros">
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="./jq/main.js"></script>
 
   </body>
+
 </html>
