Insertado div en mitad de pagina

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       &#9776;
     </button>
     <div id="home">
+      <div id="prueba"><p>HOLA PABLITO GUAPO <3</p>
+      </div>
     </div>
     <div id="school">
     </div>
