Recuadros y reestructuracion de pagina

--- a/index.html
+++ b/index.html
@@ -35,15 +35,33 @@
     <button type="button" id="core-button" class="btn btn-default" data-toggle="collapse" data-target="#exCollapsingNavbar">
       &#9776;
     </button>
-    <div id="home">
-      <div id="prueba"><p>HOLA PABLITO GUAPO <3</p>
+    <div id="home" class="apartado">
+      <div id="prueba" class="recuadro">
+        <p>Bienvenidos a Deporte y Valores</p>
+        <p>_______________________</p>
+        <p>HOLA PABLITO GUAPO <3</p>
       </div>
     </div>
-    <div id="school">
+    <div id="depyval" class="apartado">
+      <div id="prueba" class="recuadro">
+        <p>Deporte y valores</p>
+        <p>_______________________</p>
+        <p>¿Qué significa?</p>
+      </div>
     </div>
-    <div id="depyval">
+    <div id="school" class="apartado">
+      <div id="prueba" class="recuadro">
+        <p>Escuela</p>
+        <p>_______________________</p>
+        <p>Descubre como trabajamos</p>
+      </div>
     </div>
-    <div id="nosotros">
+    <div id="nosotros" class="apartado">
+      <div id="prueba" class="recuadro">
+        <p>Nosotros</p>
+        <p>_______________________</p>
+        <p>Averigua quien hay detrás de todo esto</p>
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
