Flip ok, tamaños mal

--- a/index.html
+++ b/index.html
@@ -36,31 +36,59 @@
       &#9776;
     </button>
     <div id="home" class="apartado">
-      <div id="prueba" class="recuadro">
-        <p>Bienvenidos a Deporte y Valores</p>
-        <p>_______________________</p>
-        <p>HOLA PABLITO GUAPO <3</p>
-      </div>
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="front">
+              <p>Bienvenidos a Deporte y Valores</p>
+              <p>-------</p>
+              <p>HOLA PABLITO GUAPO <3</p>
+            </div>
+            <div class="back">
+              <span>Nosotros</span>
+            </div>
+          </div>
+        </div>
     </div>
     <div id="depyval" class="apartado">
-      <div id="prueba" class="recuadro">
-        <p>Deporte y valores</p>
-        <p>_______________________</p>
-        <p>¿Qué significa?</p>
+      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        <div class="flipper">
+          <div class="front">
+            <p>Deporte y valores</p>
+            <p>-------</p>
+            <p>¿Qué significa?</p>
+          </div>
+          <div class="back">
+            <span>Descúbrelo</span>
+          </div>
+        </div>
       </div>
     </div>
     <div id="school" class="apartado">
-      <div id="prueba" class="recuadro">
-        <p>Escuela</p>
-        <p>_______________________</p>
-        <p>Descubre como trabajamos</p>
+      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        <div class="flipper">
+          <div class="front">
+            <p>Escuela</p>
+            <p>-------</p>
+            <p>Descubre como trabajamos</p>
+          </div>
+          <div class="back">
+            <span>Descúbrelo</span>
+          </div>
+        </div>
       </div>
     </div>
     <div id="nosotros" class="apartado">
-      <div id="prueba" class="recuadro">
-        <p>Nosotros</p>
-        <p>_______________________</p>
-        <p>Averigua quien hay detrás de todo esto</p>
+      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        <div class="flipper">
+          <div class="front">
+            <p>Nosotros</p>
+            <p>-------</p>
+            <p>Averigua quien hay detrás de todo esto</p>
+          </div>
+          <div class="back">
+            <span>Descúbrelo</span>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
